--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.9.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,8 +13,10 @@
     "prettier": "^3.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,11 +28,11 @@
     "extends": [
       "react-app",
       "react-app/jest",
-	  "prettier"
+      "prettier"
     ],
-	"plugins": [
-		"prettier"
-	]
+    "plugins": [
+      "prettier"
+    ]
   },
   "browserslist": {
     "production": [
